--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
         <title>Unit Conversion Calculator</title>
+        <link rel="icon" href="https://studio.code.org/v3/assets/6stac4iuESADLn2P9SER6gRDVvfcaeI-VNfCvp8Qva4/convert-icon.png">
     </head>
 
     <body>
