--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="header-container">
                 <h1 id="main-title">Unit Conversion Calculator</h1>
                 <h2 id="sub-heading">Metric ⇆ Imperial</h2>
-                <input type="number" id="user-input" min="0" name="form-0-quantity" value="0"/>
+                <input type="number" id="user-input" min="0" name="form-0-quantity" placeholder="0"/>
             </div>
     
             <div id="conversion-container">
